--- a/views/join.ejs
+++ b/views/join.ejs
@@ -1,10 +1,55 @@
 <html>
+        
+        <script src="http://code.jquery.com/jquery-2.2.4.js"   
+        integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   
+        crossorigin="anonymous"></script> 
     <table>
+        <form action="" id=dataFrm>
         <tr>
-            <td>이름<input type="text"></td><br>
-            <td>나이<input type="text"></td><br>
-            <td>신체<input type="text"></td><br>
-            <td>몸무게<input type="text"></td><br>
+            <td>이름<input type="text" id="name" ></td><br>
+            <td>나이<input type="text" id="age"></td><br>
+            <td>신체<input type="text" id="body"></td><br>
+            <td>몸무게<input type="text" id="weight"></td><br>
+            
         </tr>
+        </form>
+        <button type="button" id="sendBtn">전송</button>
     </table>
+    <script>
+           
+        $("#sendBtn").click(function(){
+           var name = $("#name").val();
+           var age = $("#age").val();
+           var body = $("#body").val();
+           var weight = $("#weight").val();
+           //var data = $("#dataFrm").serialize();
+           console.log(name);
+           console.log(age);
+           console.log(body);
+           
+           $.ajax({
+                    type:"POST",
+                    dataType:"JSON",
+                    url:"http://localhost:3001/userJoin",
+                    data:{
+                        nameajax : name,
+                        ageajax : age,
+                        weightajax : weight
+                    },
+                    success:function(result){
+                        $("#name").val("");
+                        $("#age").val("");
+                        $("#weight").val("");
+                        $("#body").val("");
+                        console.log("메시지 전송 성공");
+                       // console.log(response);
+                    },
+                    error:function(error){
+                       console.log("메시지 실패");
+                    }
+                    });
+           console.log(name);
+ })
+        
+    </script>
 </html>
